--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -734,6 +734,206 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Layernorm from scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[4., 0., 4., 2.],\n",
+       "         [0., 1., 1., 1.],\n",
+       "         [0., 0., 4., 4.]],\n",
+       "\n",
+       "        [[0., 1., 1., 2.],\n",
+       "         [0., 0., 2., 3.],\n",
+       "         [3., 2., 0., 3.]]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inp = torch.randint(5,(2, 3, 4), dtype = torch.float32)\n",
+    "# bs = 2, seq_len = 3, d_model = 4\n",
+    "inp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2.5000, 0.7500, 2.0000],\n",
+       "        [1.0000, 1.2500, 2.0000]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(inp,-1)/ 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[2.5000],\n",
+       "         [0.7500],\n",
+       "         [2.0000]],\n",
+       "\n",
+       "        [[1.0000],\n",
+       "         [1.2500],\n",
+       "         [2.0000]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_mean = torch.mean(inp,-1,keepdims=True)\n",
+    "tmp_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[2.7500],\n",
+       "         [0.1875],\n",
+       "         [4.0000]],\n",
+       "\n",
+       "        [[0.5000],\n",
+       "         [1.6875],\n",
+       "         [1.5000]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_var=torch.square(inp-tmp_mean).mean(-1,keepdim=True)\n",
+    "tmp_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[3.6667],\n",
+       "         [0.2500],\n",
+       "         [5.3333]],\n",
+       "\n",
+       "        [[0.6667],\n",
+       "         [2.2500],\n",
+       "         [2.0000]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# note that torch.var calculate this slightly different. To get the right result, dont use torch.var\n",
+    "torch.var(inp,-1,keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.9045, -1.5076,  0.9045, -0.3015],\n",
+       "         [-1.7321,  0.5774,  0.5774,  0.5774],\n",
+       "         [-1.0000, -1.0000,  1.0000,  1.0000]],\n",
+       "\n",
+       "        [[-1.4142,  0.0000,  0.0000,  1.4142],\n",
+       "         [-0.9623, -0.9623,  0.5774,  1.3472],\n",
+       "         [ 0.8165,  0.0000, -1.6330,  0.8165]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(inp - tmp_mean) / torch.sqrt(tmp_var + 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.9045, -1.5076,  0.9045, -0.3015],\n",
+       "         [-1.7321,  0.5774,  0.5774,  0.5774],\n",
+       "         [-1.0000, -1.0000,  1.0000,  1.0000]],\n",
+       "\n",
+       "        [[-1.4142,  0.0000,  0.0000,  1.4142],\n",
+       "         [-0.9623, -0.9623,  0.5774,  1.3472],\n",
+       "         [ 0.8165,  0.0000, -1.6330,  0.8165]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = torch.nn.LayerNorm(inp.shape[-1], elementwise_affine=False,eps=0)\n",
+    "output = m(inp)\n",
+    "output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1647,7 +1847,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "229px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
