--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#cons-of-&quot;one-representation&quot;-of-words\" data-toc-modified-id=\"cons-of-&quot;one-representation&quot;-of-words-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>cons of \"one representation\" of words</a></span></li><li><span><a href=\"#Contextual-word-embeddings-built-from-natural-machine-translation-(CoVe)\" data-toc-modified-id=\"Contextual-word-embeddings-built-from-natural-machine-translation-(CoVe)-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Contextual word embeddings built from natural machine translation (CoVe)</a></span></li><li><span><a href=\"#Tag-LM-(pre-ELMO)-for-Name-Entity-Recognition-(NER)\" data-toc-modified-id=\"Tag-LM-(pre-ELMO)-for-Name-Entity-Recognition-(NER)-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Tag LM (pre ELMO) for Name Entity Recognition (NER)</a></span></li><li><span><a href=\"#ELMO\" data-toc-modified-id=\"ELMO-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>ELMO</a></span><ul class=\"toc-item\"><li><span><a href=\"#weighting-of-layers-for-different-tasks\" data-toc-modified-id=\"weighting-of-layers-for-different-tasks-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>weighting of layers for different tasks</a></span></li></ul></li><li><span><a href=\"#Transformer\" data-toc-modified-id=\"Transformer-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Transformer</a></span></li><li><span><a href=\"#Self-attention\" data-toc-modified-id=\"Self-attention-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Self-attention</a></span><ul class=\"toc-item\"><li><span><a href=\"#Why-do-we-need-to-scale-by-sqrt(dk)\" data-toc-modified-id=\"Why-do-we-need-to-scale-by-sqrt(dk)-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Why do we need to scale by sqrt(dk)</a></span></li><li><span><a href=\"#Review-definition-of-Attention\" data-toc-modified-id=\"Review-definition-of-Attention-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Review definition of Attention</a></span></li></ul></li><li><span><a href=\"#Transformer's-Encoder\" data-toc-modified-id=\"Transformer's-Encoder-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Transformer's Encoder</a></span><ul class=\"toc-item\"><li><span><a href=\"#Self-attention-in-the-encoder\" data-toc-modified-id=\"Self-attention-in-the-encoder-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Self-attention in the <strong>encoder</strong></a></span></li><li><span><a href=\"#Multihead-attention\" data-toc-modified-id=\"Multihead-attention-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>Multihead attention</a></span></li><li><span><a href=\"#Why-we-need-to-do-a-linear-tfm-for-Q,K,V-(e.g.-Q@Wi)-before-doing-attention?\" data-toc-modified-id=\"Why-we-need-to-do-a-linear-tfm-for-Q,K,V-(e.g.-Q@Wi)-before-doing-attention?-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Why we need to do a linear tfm for Q,K,V (e.g. Q@Wi) before doing attention?</a></span></li><li><span><a href=\"#Complete-transformer-block\" data-toc-modified-id=\"Complete-transformer-block-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>Complete transformer block</a></span></li><li><span><a href=\"#Residual-layer\" data-toc-modified-id=\"Residual-layer-7.5\"><span class=\"toc-item-num\">7.5&nbsp;&nbsp;</span>Residual layer</a></span></li><li><span><a href=\"#Fully-connected-feed-forward-network\" data-toc-modified-id=\"Fully-connected-feed-forward-network-7.6\"><span class=\"toc-item-num\">7.6&nbsp;&nbsp;</span>Fully connected feed-forward network</a></span></li><li><span><a href=\"#Layer-norm\" data-toc-modified-id=\"Layer-norm-7.7\"><span class=\"toc-item-num\">7.7&nbsp;&nbsp;</span>Layer norm</a></span></li><li><span><a href=\"#Multi-block-with-multi-head-attention-vs-LSTM/RNN\" data-toc-modified-id=\"Multi-block-with-multi-head-attention-vs-LSTM/RNN-7.8\"><span class=\"toc-item-num\">7.8&nbsp;&nbsp;</span>Multi-block with multi-head attention vs LSTM/RNN</a></span></li><li><span><a href=\"#The-complete-encoder\" data-toc-modified-id=\"The-complete-encoder-7.9\"><span class=\"toc-item-num\">7.9&nbsp;&nbsp;</span>The complete encoder</a></span></li><li><span><a href=\"#Token-embeddings-and-tie-weight-(weight-sharing)\" data-toc-modified-id=\"Token-embeddings-and-tie-weight-(weight-sharing)-7.10\"><span class=\"toc-item-num\">7.10&nbsp;&nbsp;</span>Token embeddings and tie-weight (weight sharing)</a></span></li><li><span><a href=\"#Positional-encoding\" data-toc-modified-id=\"Positional-encoding-7.11\"><span class=\"toc-item-num\">7.11&nbsp;&nbsp;</span>Positional encoding</a></span><ul class=\"toc-item\"><li><span><a href=\"#Relative-vs-Absolute-Position\" data-toc-modified-id=\"Relative-vs-Absolute-Position-7.11.1\"><span class=\"toc-item-num\">7.11.1&nbsp;&nbsp;</span>Relative vs Absolute Position</a></span></li><li><span><a href=\"#Learnable-positional-encoding\" data-toc-modified-id=\"Learnable-positional-encoding-7.11.2\"><span class=\"toc-item-num\">7.11.2&nbsp;&nbsp;</span>Learnable positional encoding</a></span></li><li><span><a href=\"#Function-based-positional-encoding\" data-toc-modified-id=\"Function-based-positional-encoding-7.11.3\"><span class=\"toc-item-num\">7.11.3&nbsp;&nbsp;</span>Function-based positional encoding</a></span></li></ul></li><li><span><a href=\"#BERT-vs-GPT-in-term-of-positional-encoding\" data-toc-modified-id=\"BERT-vs-GPT-in-term-of-positional-encoding-7.12\"><span class=\"toc-item-num\">7.12&nbsp;&nbsp;</span>BERT vs GPT in term of positional encoding</a></span></li><li><span><a href=\"#TODO:-visualization-in-encoder\" data-toc-modified-id=\"TODO:-visualization-in-encoder-7.13\"><span class=\"toc-item-num\">7.13&nbsp;&nbsp;</span>TODO: visualization in encoder</a></span></li></ul></li><li><span><a href=\"#Transformer's-Decoder\" data-toc-modified-id=\"Transformer's-Decoder-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Transformer's Decoder</a></span></li><li><span><a href=\"#Full-model\" data-toc-modified-id=\"Full-model-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Full model</a></span></li><li><span><a href=\"#OpenAI-GPT\" data-toc-modified-id=\"OpenAI-GPT-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>OpenAI GPT</a></span><ul class=\"toc-item\"><li><span><a href=\"#Plugging-the-classification-head\" data-toc-modified-id=\"Plugging-the-classification-head-10.1\"><span class=\"toc-item-num\">10.1&nbsp;&nbsp;</span>Plugging the classification head</a></span></li></ul></li><li><span><a href=\"#BERT\" data-toc-modified-id=\"BERT-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>BERT</a></span><ul class=\"toc-item\"><li><span><a href=\"#BERT-next-sentence-prediction\" data-toc-modified-id=\"BERT-next-sentence-prediction-11.1\"><span class=\"toc-item-num\">11.1&nbsp;&nbsp;</span>BERT next sentence prediction</a></span></li><li><span><a href=\"#a-typical-embedding-input-of-BERT\" data-toc-modified-id=\"a-typical-embedding-input-of-BERT-11.2\"><span class=\"toc-item-num\">11.2&nbsp;&nbsp;</span>a typical embedding input of BERT</a></span></li><li><span><a href=\"#losses\" data-toc-modified-id=\"losses-11.3\"><span class=\"toc-item-num\">11.3&nbsp;&nbsp;</span>losses</a></span></li><li><span><a href=\"#Plugging-the-classification-head\" data-toc-modified-id=\"Plugging-the-classification-head-11.4\"><span class=\"toc-item-num\">11.4&nbsp;&nbsp;</span>Plugging the classification head</a></span></li><li><span><a href=\"#BERT-model-architecture-and-training\" data-toc-modified-id=\"BERT-model-architecture-and-training-11.5\"><span class=\"toc-item-num\">11.5&nbsp;&nbsp;</span>BERT model architecture and training</a></span></li><li><span><a href=\"#BERT-model-finetuning\" data-toc-modified-id=\"BERT-model-finetuning-11.6\"><span class=\"toc-item-num\">11.6&nbsp;&nbsp;</span>BERT model finetuning</a></span></li></ul></li><li><span><a href=\"#AlBERT\" data-toc-modified-id=\"AlBERT-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>AlBERT</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#cons-of-&quot;one-representation&quot;-of-words\" data-toc-modified-id=\"cons-of-&quot;one-representation&quot;-of-words-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>cons of \"one representation\" of words</a></span></li><li><span><a href=\"#Contextual-word-embeddings-built-from-natural-machine-translation-(CoVe)\" data-toc-modified-id=\"Contextual-word-embeddings-built-from-natural-machine-translation-(CoVe)-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Contextual word embeddings built from natural machine translation (CoVe)</a></span></li><li><span><a href=\"#Tag-LM-(pre-ELMO)-for-Name-Entity-Recognition-(NER)\" data-toc-modified-id=\"Tag-LM-(pre-ELMO)-for-Name-Entity-Recognition-(NER)-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Tag LM (pre ELMO) for Name Entity Recognition (NER)</a></span></li><li><span><a href=\"#ELMO\" data-toc-modified-id=\"ELMO-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>ELMO</a></span><ul class=\"toc-item\"><li><span><a href=\"#weighting-of-layers-for-different-tasks\" data-toc-modified-id=\"weighting-of-layers-for-different-tasks-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>weighting of layers for different tasks</a></span></li></ul></li><li><span><a href=\"#Transformer\" data-toc-modified-id=\"Transformer-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Transformer</a></span></li><li><span><a href=\"#Self-attention\" data-toc-modified-id=\"Self-attention-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Self-attention</a></span><ul class=\"toc-item\"><li><span><a href=\"#Why-do-we-need-to-scale-by-sqrt(dk)\" data-toc-modified-id=\"Why-do-we-need-to-scale-by-sqrt(dk)-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Why do we need to scale by sqrt(dk)</a></span></li><li><span><a href=\"#Review-definition-of-Attention\" data-toc-modified-id=\"Review-definition-of-Attention-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Review definition of Attention</a></span></li></ul></li><li><span><a href=\"#Transformer's-Encoder\" data-toc-modified-id=\"Transformer's-Encoder-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Transformer's Encoder</a></span><ul class=\"toc-item\"><li><span><a href=\"#Self-attention-in-the-encoder\" data-toc-modified-id=\"Self-attention-in-the-encoder-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Self-attention in the <strong>encoder</strong></a></span></li><li><span><a href=\"#Multihead-attention\" data-toc-modified-id=\"Multihead-attention-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>Multihead attention</a></span></li><li><span><a href=\"#Why-we-need-to-do-a-linear-tfm-for-Q,K,V-(e.g.-Q@Wi)-before-doing-attention?\" data-toc-modified-id=\"Why-we-need-to-do-a-linear-tfm-for-Q,K,V-(e.g.-Q@Wi)-before-doing-attention?-7.3\"><span class=\"toc-item-num\">7.3&nbsp;&nbsp;</span>Why we need to do a linear tfm for Q,K,V (e.g. Q@Wi) before doing attention?</a></span></li><li><span><a href=\"#Complete-transformer-block\" data-toc-modified-id=\"Complete-transformer-block-7.4\"><span class=\"toc-item-num\">7.4&nbsp;&nbsp;</span>Complete transformer block</a></span></li><li><span><a href=\"#Residual-layer\" data-toc-modified-id=\"Residual-layer-7.5\"><span class=\"toc-item-num\">7.5&nbsp;&nbsp;</span>Residual layer</a></span></li><li><span><a href=\"#Fully-connected-feed-forward-network\" data-toc-modified-id=\"Fully-connected-feed-forward-network-7.6\"><span class=\"toc-item-num\">7.6&nbsp;&nbsp;</span>Fully connected feed-forward network</a></span></li><li><span><a href=\"#Layer-norm\" data-toc-modified-id=\"Layer-norm-7.7\"><span class=\"toc-item-num\">7.7&nbsp;&nbsp;</span>Layer norm</a></span></li><li><span><a href=\"#Multi-block-with-multi-head-attention-vs-LSTM/RNN\" data-toc-modified-id=\"Multi-block-with-multi-head-attention-vs-LSTM/RNN-7.8\"><span class=\"toc-item-num\">7.8&nbsp;&nbsp;</span>Multi-block with multi-head attention vs LSTM/RNN</a></span></li><li><span><a href=\"#The-complete-encoder\" data-toc-modified-id=\"The-complete-encoder-7.9\"><span class=\"toc-item-num\">7.9&nbsp;&nbsp;</span>The complete encoder</a></span></li><li><span><a href=\"#Token-embeddings-and-tie-weight-(weight-sharing)\" data-toc-modified-id=\"Token-embeddings-and-tie-weight-(weight-sharing)-7.10\"><span class=\"toc-item-num\">7.10&nbsp;&nbsp;</span>Token embeddings and tie-weight (weight sharing)</a></span></li><li><span><a href=\"#Positional-encoding\" data-toc-modified-id=\"Positional-encoding-7.11\"><span class=\"toc-item-num\">7.11&nbsp;&nbsp;</span>Positional encoding</a></span><ul class=\"toc-item\"><li><span><a href=\"#Relative-vs-Absolute-Position\" data-toc-modified-id=\"Relative-vs-Absolute-Position-7.11.1\"><span class=\"toc-item-num\">7.11.1&nbsp;&nbsp;</span>Relative vs Absolute Position</a></span></li><li><span><a href=\"#Learnable-positional-encoding\" data-toc-modified-id=\"Learnable-positional-encoding-7.11.2\"><span class=\"toc-item-num\">7.11.2&nbsp;&nbsp;</span>Learnable positional encoding</a></span></li><li><span><a href=\"#Function-based-positional-encoding\" data-toc-modified-id=\"Function-based-positional-encoding-7.11.3\"><span class=\"toc-item-num\">7.11.3&nbsp;&nbsp;</span>Function-based positional encoding</a></span></li></ul></li><li><span><a href=\"#BERT-vs-GPT-in-term-of-positional-encoding\" data-toc-modified-id=\"BERT-vs-GPT-in-term-of-positional-encoding-7.12\"><span class=\"toc-item-num\">7.12&nbsp;&nbsp;</span>BERT vs GPT in term of positional encoding</a></span></li><li><span><a href=\"#TODO:-visualization-in-encoder\" data-toc-modified-id=\"TODO:-visualization-in-encoder-7.13\"><span class=\"toc-item-num\">7.13&nbsp;&nbsp;</span>TODO: visualization in encoder</a></span></li></ul></li><li><span><a href=\"#Transformer's-Decoder\" data-toc-modified-id=\"Transformer's-Decoder-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Transformer's Decoder</a></span><ul class=\"toc-item\"><li><span><a href=\"#Output-of-Decoder-for-training\" data-toc-modified-id=\"Output-of-Decoder-for-training-8.1\"><span class=\"toc-item-num\">8.1&nbsp;&nbsp;</span>Output of Decoder for training</a></span></li><li><span><a href=\"#Masks\" data-toc-modified-id=\"Masks-8.2\"><span class=\"toc-item-num\">8.2&nbsp;&nbsp;</span>Masks</a></span></li><li><span><a href=\"#Output-of-Decoder-for-Inference\" data-toc-modified-id=\"Output-of-Decoder-for-Inference-8.3\"><span class=\"toc-item-num\">8.3&nbsp;&nbsp;</span>Output of Decoder for Inference</a></span></li></ul></li><li><span><a href=\"#Full-model\" data-toc-modified-id=\"Full-model-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Full model</a></span></li><li><span><a href=\"#OpenAI-GPT\" data-toc-modified-id=\"OpenAI-GPT-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>OpenAI GPT</a></span><ul class=\"toc-item\"><li><span><a href=\"#Plugging-the-classification-head\" data-toc-modified-id=\"Plugging-the-classification-head-10.1\"><span class=\"toc-item-num\">10.1&nbsp;&nbsp;</span>Plugging the classification head</a></span></li></ul></li><li><span><a href=\"#BERT\" data-toc-modified-id=\"BERT-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>BERT</a></span><ul class=\"toc-item\"><li><span><a href=\"#BERT-next-sentence-prediction\" data-toc-modified-id=\"BERT-next-sentence-prediction-11.1\"><span class=\"toc-item-num\">11.1&nbsp;&nbsp;</span>BERT next sentence prediction</a></span></li><li><span><a href=\"#a-typical-embedding-input-of-BERT\" data-toc-modified-id=\"a-typical-embedding-input-of-BERT-11.2\"><span class=\"toc-item-num\">11.2&nbsp;&nbsp;</span>a typical embedding input of BERT</a></span></li><li><span><a href=\"#losses\" data-toc-modified-id=\"losses-11.3\"><span class=\"toc-item-num\">11.3&nbsp;&nbsp;</span>losses</a></span></li><li><span><a href=\"#Plugging-the-classification-head\" data-toc-modified-id=\"Plugging-the-classification-head-11.4\"><span class=\"toc-item-num\">11.4&nbsp;&nbsp;</span>Plugging the classification head</a></span></li><li><span><a href=\"#BERT-model-architecture-and-training\" data-toc-modified-id=\"BERT-model-architecture-and-training-11.5\"><span class=\"toc-item-num\">11.5&nbsp;&nbsp;</span>BERT model architecture and training</a></span></li><li><span><a href=\"#BERT-model-finetuning\" data-toc-modified-id=\"BERT-model-finetuning-11.6\"><span class=\"toc-item-num\">11.6&nbsp;&nbsp;</span>BERT model finetuning</a></span></li></ul></li><li><span><a href=\"#AlBERT\" data-toc-modified-id=\"AlBERT-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>AlBERT</a></span></li></ul></div>"
    ]
   },
   {
@@ -1415,6 +1415,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Output of Decoder for training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using teacher forcing: input the **entire** sentence (that needs to be translated), and decoder will output the **entire** translation sentence, and we use this entire output to compare with the translation true label to calculate loss function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/decoder_output1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Masks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because in inference, a word cannot attend to any word after it (as those don't exist yet because we are generating words), so in training, we have to train our decoder so that a word can only attend to previous words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/mask.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/mask2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output of Decoder for Inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to Seq2Seq model: predict next word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/decoder_output2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Full model"
    ]
   },
@@ -1847,7 +1917,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "245px"
    },
    "toc_section_display": true,
    "toc_window_display": true
