add jeremy kaggle nb

--- a/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_details.ipynb
+++ b/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_details.ipynb
@@ -5569,7 +5569,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### define sentiment clas learner"
    ]
@@ -5577,7 +5579,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5600,7 +5604,9 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5620,7 +5626,9 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn_clas = learn_clas.load_encoder('finetuned_sen')"
@@ -5629,7 +5637,9 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5651,7 +5661,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5671,7 +5683,9 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5722,7 +5736,9 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -6198,7 +6214,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "298.55px"
+    "width": "298.537px"
    },
    "toc_section_display": true,
    "toc_window_display": true
