add new note for oreilly

--- a/fastai2_huggingface_nlp/understanding_of_gradientgraph_fastai2tokenizer_truncatedbptt_and_LMModel3.ipynb
+++ b/fastai2_huggingface_nlp/understanding_of_gradientgraph_fastai2tokenizer_truncatedbptt_and_LMModel3.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Check-different-tokenizer-in-fastai-library-(word,-subword-...)\" data-toc-modified-id=\"Check-different-tokenizer-in-fastai-library-(word,-subword-...)-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Check different tokenizer in fastai library (word, subword ...)</a></span></li><li><span><a href=\"#Check-understanding-of-gradient-computation-graph-and-requires_grad\" data-toc-modified-id=\"Check-understanding-of-gradient-computation-graph-and-requires_grad-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Check understanding of gradient computation graph and requires_grad</a></span><ul class=\"toc-item\"><li><span><a href=\"#Another-example,-adding-another-tensor-with-requires_grad=True\" data-toc-modified-id=\"Another-example,-adding-another-tensor-with-requires_grad=True-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Another example, adding another tensor with requires_grad=True</a></span></li></ul></li><li><span><a href=\"#Explaning-truncated-bptt-and-LMModel3-requires_grad-in-forward()\" data-toc-modified-id=\"Explaning-truncated-bptt-and-LMModel3-requires_grad-in-forward()-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Explaning truncated bptt and LMModel3 requires_grad in forward()</a></span><ul class=\"toc-item\"><li><span><a href=\"#Preparing-data\" data-toc-modified-id=\"Preparing-data-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Preparing data</a></span></li><li><span><a href=\"#Model\" data-toc-modified-id=\"Model-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Model</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Check different tokenizer in fastai library (word, subword ...)"
@@ -893,9 +903,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('fastai2': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bitfastai2conda023d9f2c3b894be385b0b3b80e252fc1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -907,7 +917,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
