minor for oreilly, add teaching file shopee

--- a/oreilly_transformer_book/chap_2_text_classification.ipynb
+++ b/oreilly_transformer_book/chap_2_text_classification.ipynb
@@ -1888,7 +1888,7 @@
     "width": "170.4px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
